--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "image-upload-test",
   "version": "0.1.0",
   "private": true,
+  "author": 'Kunal Nasa',
   "scripts": {
     "dev": "next dev",
     "build": "next build",
